<resources>
    <string name="app_name">Tienda</string>
    <string name="btnText">Entrar a la tienda</string>
    <string name="listProductsTitle">Conoce nuestros productos</string>
    <string name="btn_detail">Ver detalle</string>
    <string name="DetailProductTitle">Detalle del producto</string>
    <string name="BtnInfo">Comprar</string>
    <string name="formProductTitle">Nuevo producto</string>
    <string name="addProductBtn">Crear producto</string>
    <string name="addProductSubtitle">Diligencia el formulario paa agregar un nuevo producto</string>
    <string name="loginBtn">Ingresar</string>
    <string name="registerMessage">¿No tienes cuenta?</string>
    <string name="loginBtnRegister">Registrarse</string>
    <string name="loginTitle">Inicia sesión</string>
    <string name="registerTitle">Registro</string>
</resources>